--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- HEADER -->
 	<header class="header">
 		<div class="header-content">
-			<img src="IMG/logo.png" class="logo"  alt="Academy Logo">
+			<img src="/logo.png" class="logo"  alt="Academy Logo">
 			<h3 class="title animated zoomIn delay-2s">Sound Academy</h3>
 			<p class="text">The mission of Sound Academy is to educate, train, and develop students to excel in music as a career. Cultivating the musicianship of all our students is the foundation of our curriculum.</p>
 		</div>
